--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=GatewayServer
 storage.path=./storage
 
 # \u8F6F\u4EF6\u8BBE\u8BA1\u5E73\u53F0
-com.tfswx.rest-template-plus.name=\u5DE5\u65F6\u7CFB\u7EDF
+com.tfswx.rest-template-plus.name=\u8F6F\u4EF6\u8BBE\u8BA1\u5E73\u53F0
 com.tfswx.rest-template-plus.url=http://192.168.7.30:29090
 
 spring.cloud.gateway.routes[0].id=projecta-servera
