--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,76 @@
-plugins {
-    id 'java'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-}
+group = 'com.tyyw'
+version = '1.0.0-SNAPSHOT'
 
-allprojects {
-    apply plugin: 'java'
-    apply plugin: 'java-library'
-    apply plugin: 'maven-publish'
-}
-
-group 'org.example'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-    maven {
-        allowInsecureProtocol true
-        url "http://192.168.7.197:8081/repository/maven-public/"
+buildscript {
+    ext {
+        dependencyManagementPluginVersion = '1.0.6.RELEASE'
+        springCloudVersion= 'Greenwich.M3'
+        lcdpVersion = "1.0.0-SNAPSHOT"
+    }
+    repositories {
+        maven { url "http://192.168.7.197:8081/repository/maven-public/" }
+    }
+    dependencies {
+        classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagementPluginVersion}")
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.1.2.RELEASE'
+        classpath 'com.github.halower:newbie-spring-boot-environment-plugin:1.1.0'
+        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1'
     }
 }
 
-ext {
-    lcdpVersion = "1.0.0-SNAPSHOT"
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'spring-environment-management'
+apply plugin: 'org.sonarqube'
+apply plugin: 'org.springframework.boot'
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+repositories {
+    maven { url "http://192.168.7.197:8081/repository/maven-public/" }
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        if (details.requested.group == 'ch.qos.logback') {
+            details.useVersion '1.2.10'
+        }
+        if (requested.group == 'org.apache.logging.log4j') {
+            details.useVersion '2.17.0'
+        }
+//        if (details.requested.group == 'org.springframework' && details.requested.name == 'spring-web') {
+//            details.useVersion '2.1.0'
+//        }
+//        if (details.requested.group == 'org.springframework' && details.requested.name == 'spring-webflux') {
+//            details.useVersion '2.1.2.RELEASE'
+//        }
+//        if (details.requested.group == 'org.springframework' && details.requested.name == 'spring-webmvc') {
+//            details.useVersion '2.1.2.RELEASE'
+//        }
+    }
 }
 
 dependencies {
-    implementation("org.springframework.cloud:spring-cloud-starter-gateway:2.2.1.RELEASE")
-    implementation 'cn.hutool:hutool-bom:5.8.24'
-    implementation 'org.projectlombok:lombok:1.18.4'
-    implementation 'com.alibaba:fastjson:2.0.31'
+    implementation("org.springframework.cloud:spring-cloud-starter-gateway")
+    implementation 'cn.hutool:hutool-all:5.8.22'
+    implementation("org.projectlombok:lombok:1.18.6")
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    implementation 'com.alibaba:fastjson:1.2.83'
     // http组件
-    implementation("com.tfswx:tf-spring-boot-component-rest-template-plus:${lcdpVersion}")
-    //    implementation 'com.tfswx:tf-component-api-task-push:1.0.0-SNAPSHOT'
+    implementation("com.tfswx:tf-spring-boot-component-rest-template-plus:${lcdpVersion}") {
+        exclude group: 'org.springframework', module: 'spring-webmvc'
+    }
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+dependencyManagement {
+    imports {
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+    }
 }
