--- a/build.gradle
+++ b/build.gradle
@@ -1,67 +1,48 @@
-group = 'com.tyyw'
-version = '1.0.0-SNAPSHOT'
-
-buildscript {
-    ext {
-        dependencyManagementPluginVersion = '1.0.6.RELEASE'
-        springCloudVersion= 'Greenwich.M3'
-        lcdpVersion = "1.0.0-SNAPSHOT"
-    }
-    repositories {
-        maven { url "http://192.168.7.197:8081/repository/maven-public/" }
-    }
-    dependencies {
-        classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagementPluginVersion}")
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.1.2.RELEASE'
-        classpath 'com.github.halower:newbie-spring-boot-environment-plugin:1.1.0'
-        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1'
-    }
+plugins {
+    id 'java'
+    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'spring-environment-management'
-apply plugin: 'org.sonarqube'
-apply plugin: 'org.springframework.boot'
+group = 'com.tfswx'
+version = '1.0.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+repositories {
+    maven {
+        url "http://192.168.7.197:8081/repository/maven-public/"
+        allowInsecureProtocol true
+    }
+    mavenCentral()
+}
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
-repositories {
-    maven { url "http://192.168.7.197:8081/repository/maven-public/" }
-}
-
-configurations.all {
-    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-        if (details.requested.group == 'ch.qos.logback') {
-            details.useVersion '1.2.10'
-        }
-        if (requested.group == 'org.apache.logging.log4j') {
-            details.useVersion '2.17.0'
-        }
-    }
-}
-
-dependencies {
-    implementation("org.springframework.cloud:spring-cloud-starter-gateway")
-    implementation 'cn.hutool:hutool-all:5.8.22'
-    implementation("org.projectlombok:lombok:1.18.6")
-    annotationProcessor 'org.projectlombok:lombok:1.18.6'
-    implementation 'com.alibaba:fastjson:1.2.83'
-    // http组件
-    implementation("com.tfswx:tf-spring-boot-component-rest-template-plus:${lcdpVersion}") {
-        exclude group: 'org.springframework', module: 'spring-webmvc'
-    }
+ext {
+    set('springBootVersion', "2.7.2")
+    set('springCloudVersion', "2021.0.3")
+    set('lcdpVersion', "1.0.0-SNAPSHOT")
 }
 
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
+
+dependencies {
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'cn.hutool:hutool-all:5.8.25'
+    implementation("org.projectlombok:lombok:1.18.6")
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    implementation 'com.alibaba:fastjson:1.2.83'
+    // 存储组件
+    implementation("com.tfswx:tf-spring-boot-storage-dxcc-starter:${lcdpVersion}")
+    runtimeOnly("com.tfswx:tf-spring-boot-storage-dxcc-driver-local:${lcdpVersion}")
+}
+
+
+
+
