--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
     implementation 'com.alibaba:fastjson:1.2.83'
     // 存储组件
-    implementation("com.tfswx:tf-spring-boot-storage-dxcc-starter:${lcdpVersion}")
-    runtimeOnly("com.tfswx:tf-spring-boot-storage-dxcc-driver-local:${lcdpVersion}")
+//    implementation("com.tfswx:tf-spring-boot-storage-dxcc-starter:${lcdpVersion}")
+//    runtimeOnly("com.tfswx:tf-spring-boot-storage-dxcc-driver-local:${lcdpVersion}")
 }
 
 
