--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,7 @@ server:
 spring:
   application:
     name: api-gateway
-#  cloud:
-#    gateway:
-#      routes:
-#        - id: servera
-#          uri: http://192.168.7.30:8181
-#          predicates:
-#            - Path=/hello
 storage:
-  path: ./storage
+  path: ../storage
 control:
   address: http://192.168.7.30:29090
