--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,13 @@ server:
 spring:
   application:
     name: api-gateway
+  cloud:
+    gateway:
+      routes:
+        - id: servera
+          uri: http://192.168.7.30:8181
+          predicates:
+            - Path=/**
 storage:
   path: ../storage
 control:
