--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 80
 spring:
   application:
     name: api-gateway
@@ -12,9 +12,9 @@ spring:
             - Path=/**
 storage:
   path: ../storage
-feign:
-  client:
-    config:
-      default:
-        url: ${remote.route.service.url:http://192.168.1.85:9090}
+feignClient:
+  url: http://192.168.1.85:9090
+dns:
+  gateway:
+    ip: 192.168.7.30
 
