--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 80
+  port: 8888
 spring:
   application:
     name: api-gateway
@@ -14,7 +14,7 @@ storage:
   path: ../storage
 feignClient:
   url: http://192.168.1.85:9090
-dns:
-  gateway:
-    ip: 192.168.7.30
+#dns:
+#  gateway:
+#    ip: 192.168.7.30
 
