--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
-    id 'java'
+    id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+    id 'java'
 }
 
 group = 'com.tfswx'
-version = '1.0.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     maven {
@@ -43,7 +44,4 @@ dependencies {
 //    implementation("com.tfswx:tf-spring-boot-storage-dxcc-starter:${lcdpVersion}")
 //    runtimeOnly("com.tfswx:tf-spring-boot-storage-dxcc-driver-local:${lcdpVersion}")
 }
-
-
-
 
