--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ storage:
 feignClient:
   #  url: http://192.168.1.85:9090
   url: http://192.168.1.29:29090
-dns:
-  gateway:
-    ip: 192.168.7.30
+#dns:
+#  gateway:
+#    ip: 192.168.7.30
 
