--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,47 @@
 plugins {
-    id 'java'
+    id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+    id 'java'
 }
 
-allprojects {
-//    apply plugin: 'idea'
-    apply plugin: 'java'
-    apply plugin: 'java-library'
-    apply plugin: 'maven-publish'
-}
-
-group 'org.example'
-version '1.0-SNAPSHOT'
+group = 'com.tfswx'
+version = '1.0.0'
 
 repositories {
+    maven {
+        url "http://192.168.7.197:8081/repository/maven-public/"
+        allowInsecureProtocol true
+    }
     mavenCentral()
 }
 
-dependencies {
-    implementation("org.apache.commons:commons-lang3:3.8.1")
-    implementation("org.springframework.cloud:spring-cloud-starter-gateway:2.2.1.RELEASE")
-    implementation 'cn.hutool:hutool-bom:5.8.24'
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
 
-test {
-    useJUnitPlatform()
+ext {
+    set('springBootVersion', "2.7.2")
+    set('springCloudVersion', "2021.0.3")
+    set('lcdpVersion', "1.0.0-SNAPSHOT")
 }
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
+dependencies {
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'cn.hutool:hutool-all:5.8.25'
+    implementation("org.projectlombok:lombok:1.18.6")
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    implementation 'com.alibaba:fastjson:1.2.83'
+    implementation("com.tfswx:tf-futool-core:${lcdpVersion}")
+    // 存储组件
+//    implementation("com.tfswx:tf-spring-boot-storage-dxcc-starter:${lcdpVersion}")
+//    runtimeOnly("com.tfswx:tf-spring-boot-storage-dxcc-driver-local:${lcdpVersion}")
+}
+
